--- a/geo_exam/1.html
+++ b/geo_exam/1.html
@@ -4,8 +4,7 @@
 	<head>
 		
 		<meta http-equiv="Content-Tipe" content="text/html; charset=UTF-8"/>
-		<link href="style.css" rel="stylesheet" type="text/css"/ media ="screen">
-		<link href="style1.css" rel="stylesheet" type="text/css"/ media="handheld">
+		<link href="style.css" rel="stylesheet" type="text/css"/>
 		<link rel="icon" href="../favicon.ico" type="image/x-icon">
 		<title>геология 1-10</title>
 		<script href="js.js"></script>
