--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 			</article>
 			<article>
 				<center><h3><a href="rand.html">экзамен по геологии</a></h3></center>
-				<p><img src=".jpg"/></p>
+				<p><img src="stafeev.jpg"/></p>
 				<form>
 					<input type = "text" id="in_g_ex"  size="40" value="" placeholder="введите номер вопроса">
 					<input id="g_ex_b" type="button" onclick="location.href= 'geo_exam/' + (Math.floor((document.getElementById('in_g_ex').value -1)/10)+1) + '.html'" class="button"  value="go!">
