--- a/downloads/downloads.html
+++ b/downloads/downloads.html
@@ -35,8 +35,8 @@
 	<p><img class="djvu" />
 	<a href="Неорганическая химия. Т. 3, кн. 2. Под ред. Ю.Д. Третьякова.djvu" download>Третьяков, неорганическая химия, Т. 3</a>
 	</p>
-	<p>
-	
+	<p><img class="pdf" />
+	<a href="Содержание III коллоквиума 1 семестр.pdf" download>Содержание III коллоквиума 1 семестр</a>
 	</p>
 	<p>
 	
@@ -191,8 +191,8 @@
 	<p><img class="Word"/>
 	<a href="Вопросы для экзамена для 1 курса почвоведов - 2019.doc" download>Вопросы для экзамена для 1 курса почвоведов - 2019</a>
 	</p>
-	<p>
-	
+	<p><p><img class="Word"/>
+	<a href="КОЛЛОКВИУМ №1 1семестр.doc" download>КОЛЛОКВИУМ №1 1семестр</a>
 	</p>
 	<p>
 	
