--- a/downloads/downloads.html
+++ b/downloads/downloads.html
@@ -23,7 +23,7 @@
 	<p><img class="Chrome" />
 	<a href="https://yadi.sk/d/NYQroCtUEm5JcQ">Материалы от Игоря Александровича Тюлькова</a>
 	</p>
-	<p><img src="djvu-ico.png" class="djvu" />
+	<p><img src="djvu-ico.png" class="djvu1" />
 	<a href="Неорганическая химия. Т. 1. Под ред. Ю.Д. Третьякова.djvu" download>Третьяков, неорганическая химия, Т. 1.1</a>
 	</p>
 	<p><img class="djvu" />
@@ -37,27 +37,6 @@
 	</p>
 	<p><img class="pdf" />
 	<a href="Содержание III коллоквиума 1 семестр.pdf" download>Содержание III коллоквиума 1 семестр</a>
-	</p>
-	<p>
-	
-	</p>
-	<p>
-	
-	</p>
-	<p>
-	
-	</p>
-	<p>
-	
-	</p>
-	<p>
-	
-	</p>
-	<p>
-	
-	</p>
-	<p>
-	
 	</p>
 	</div>
 	<div class="main_d">
@@ -83,61 +62,12 @@
 	<p>
 	
 	</p>
-	<p>
-	
-	</p>
-	<p>
-	
-	</p>
-	<p>
-	
-	</p>
-	<p>
-	
-	</p>
-	<p>
-	
-	</p>
-	<p>
-	
-	</p>
+
 	</div>
 	<div class="main_d">
 	<h2>Геология</h2>
-	<p>
-	
-	</p>
-	<p>
-	
-	</p>
-	<p>
-	
-	</p>
-	<p>
-	
-	</p>
-	<p>
-	
-	</p>
-	<p>
-	
-	</p>
-	<p>
-	
-	</p>
-	<p>
-	
-	</p>
-	<p>
-	
-	</p>
-	<p>
-	
-	</p>
-	<p>
-	
-	</p>
-	<p>
+	<p><img class="pdf" />
+	<a href="ekz_po_geologii.pdf" download>ekz_po_geologii</a>
 	
 	</p>
 	<p>
@@ -146,40 +76,8 @@
 	</div>
 	<div class="main_d">
 	<h2>Английский</h2>
-	<p>
-	
-	</p>
-	<p>
-	
-	</p>
-	<p>
-	
-	</p>
-	<p>
-	
-	</p>
-	<p>
-	
-	</p>
-	<p>
-	
-	</p>
-	<p>
-	
-	</p>
-	<p>
-	
-	</p>
-	<p>
-	
-	</p>
-	<p>
-	
-	</p>
-	<p>
-	
-	</p>
-	<p>
+	<p><img class="pdf" />
+	<a href="English Grammar in Use._Murphy R._4-ed, 2012-15 -394с(e-book).PDF" download>English Grammar in Use._Murphy R._4-ed, 2012-15 -394с(e-book)</a>
 	
 	</p>
 	<p>
@@ -193,36 +91,6 @@
 	</p>
 	<p><p><img class="Word"/>
 	<a href="КОЛЛОКВИУМ №1 1семестр.doc" download>КОЛЛОКВИУМ №1 1семестр</a>
-	</p>
-	<p>
-	
-	</p>
-	<p>
-	
-	</p>
-	<p>
-	
-	</p>
-	<p>
-	
-	</p>
-	<p>
-	
-	</p>
-	<p>
-	
-	</p>
-	<p>
-	
-	</p>
-	<p>
-	
-	</p>
-	<p>
-	
-	</p>
-	<p>
-	
 	</p>
 	<p>
 	
