--- a/downloads/downloads.html
+++ b/downloads/downloads.html
@@ -18,7 +18,7 @@
 		<h1>Дополнительные материалы</h1>
 	</header>
 	
-	<div class="main_d">
+	<div class="main_d" id="chem">
 	<h2>Химия</h2>
 	<p><img class="Chrome" />
 	<a href="https://yadi.sk/d/NYQroCtUEm5JcQ">Материалы от Игоря Александровича Тюлькова</a>
@@ -39,7 +39,7 @@
 	<a href="Содержание III коллоквиума 1 семестр.pdf" download>Содержание III коллоквиума 1 семестр</a>
 	</p>
 	</div>
-	<div class="main_d">
+	<div class="main_d" id="soil">
 	<h2>Почвоведение</h2>
 	<p>
 	
@@ -64,7 +64,7 @@
 	</p>
 
 	</div>
-	<div class="main_d">
+	<div class="main_d" id="geology">
 	<h2>Геология</h2>
 	<p><img class="pdf" />
 	<a href="ekz_po_geologii.pdf" download>ekz_po_geologii</a>
@@ -84,16 +84,16 @@
 	
 	</p>
 	</div>
-	<div class="main_d">
+	<div class="main_d" id="botany">
 	<h2>Ботаника</h2>
 	<p><img class="Word"/>
 	<a href="Вопросы для экзамена для 1 курса почвоведов - 2019.doc" download>Вопросы для экзамена для 1 курса почвоведов - 2019</a>
 	</p>
-	<p><p><img class="Word"/>
+	<p><img class="Word"/>
 	<a href="КОЛЛОКВИУМ №1 1семестр.doc" download>КОЛЛОКВИУМ №1 1семестр</a>
 	</p>
-	<p>
-	
+	<p><img class="Chrome" />
+	<a href="https://drive.google.com/drive/folders/0B1Wqqtu6qQViZnpUcFkySS1wZWM" >материалы по геоботанике от старшекурсников</a>
 	</p>
 	</div>
 	
