--- a/s1/s1.html
+++ b/s1/s1.html
@@ -12,7 +12,7 @@
 		<header>
 			<a id="a_1" href="../index.html">назад</a><h1>магматические горные породы</h1>
 		</header>
-		
+		<div id="d1">
 		<div id="d2">
 <center><img class="i1" src="гранит.jpg"/><center>
 <div class="desc">
@@ -353,7 +353,7 @@
 	</ol>
 </div>
 </div>
-
+</div>
 
 
 
