--- a/s3/s3.html
+++ b/s3/s3.html
@@ -12,7 +12,7 @@
 		<header>
 			<a id="a_1" href="../index.html">назад</a><h1>метаморфические горные породы</h1>
 		</header>
-		
+		<div id="d1">
 		<div id="d2">
 <center><img class="i1" src="гнейс.jpg"/><center>
 <div class="desc">
@@ -182,7 +182,7 @@
 	</ol>
 </div>
 </div>
-
+</div>
 
 
 	
